--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,13 @@
 *, h1, h2, h3, h4, h5, h6 {
   margin: 0;
+  padding: 0;
 }
 
-* {
-  padding: 0;
+input {
+  font-family: inherit;
   box-sizing: border-box;
+}
+
+button:not(:disabled) {
+  cursor: pointer;
 }
