--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,15 +1,15 @@
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 }
 
-*, h1, h2, h3, h4, h5, h6 {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 input {
   font-family: inherit;
-  box-sizing: border-box;
 }
 
 button:not(:disabled) {
